--- a/kuntao/msm8953-regulator-kuntao.dtsi
+++ b/kuntao/msm8953-regulator-kuntao.dtsi
@@ -11,8 +11,12 @@
  * GNU General Public License for more details.
  */
 
-&pm8953_l10 {
-	regulator-min-microvolt = <1800000>;
-	regulator-max-microvolt = <1800000>;
-	qcom,init-voltage = <1800000>;
+&rpm_bus {
+	rpm-regulator-ldoa10 {
+		pm8953_l10: regulator-l10 {
+			regulator-min-microvolt = <1800000>;
+			regulator-max-microvolt = <1800000>;
+			qcom,init-voltage = <1800000>;
+		};
+	};
 };
