--- a/kuntao/pm8953-kuntao.dtsi
+++ b/kuntao/pm8953-kuntao.dtsi
@@ -22,19 +22,19 @@
 				qcom,s2-type = <7>;
 			};
 		};
-	};
-};
 
-&pm8953_vadc {
-	chan@11 {
-		label = "chg_therm";
-	};
+		pm8953_vadc: vadc@3100 {
+			chan@11 {
+				label = "chg_therm";
+			};
 
-	chan@13 {
-		label = "msm_therm";
-	};
-};
+			chan@13 {
+				label = "msm_therm";
+			};
+		};
 
-&pm8953_rtc {
-	qcom,qpnp-rtc-alarm-pwrup = <1>;
+		pm8953_rtc: qcom,pm8953_rtc {
+			qcom,qpnp-rtc-alarm-pwrup = <1>;
+		};
+	};
 };
