--- a/kuntao/pmi8950-kuntao.dtsi
+++ b/kuntao/pmi8950-kuntao.dtsi
@@ -51,7 +51,7 @@
 			qcom,loop-ea-gm = <1>;
 			qcom,vref-psm-mv = <550>;
 			qcom,ovp-mv = <31000>;
-			qcom,enable-amoled-pulse-skipping;
+			qcom,lcd-psm-ctrl;
 			qcom,cons-sync-write-delay-us = <1000>;
 		};
 
