--- a/kuntao/msm8953-mtp-kuntao.dtsi
+++ b/kuntao/msm8953-mtp-kuntao.dtsi
@@ -12,6 +12,8 @@
  * GNU General Public License for more details.
  */
 
+#include <dt-bindings/gpio/gpio.h>
+#include <dt-bindings/clock/msm-clocks-8953.h>
 #include "msm8953-kuntao.dtsi"
 #include "msm8953-audio-kuntao.dtsi"
 #include "msm8953-camera-sensor-kuntao.dtsi"
@@ -20,35 +22,25 @@
 #include "pm8953-kuntao.dtsi"
 #include "pmi8950-kuntao.dtsi"
 
-&spi_3 { /* BLSP1 QUP3 */
-	spi-max-frequency = <16000000>;
-};
-
 &blsp1_uart0 {
 	status = "ok";
 	pinctrl-names = "default";
 	pinctrl-0 = <&uart_console_active>;
 };
 
-&mem_client_3_size {
-	qcom,peripheral-size = <0x500000>;
-};
-
 &pm8953_gpios {
-	/* GPIO 2 (NFC_CLK_REQ) */
-	gpio@c100 {
-		qcom,mode = <0>;
-		qcom,output-type = <0>;
-		qcom,pull = <0>;
-		qcom,vin-sel = <2>;
-		qcom,out-strength = <3>;
-		qcom,src-sel = <0>;
-		qcom,master-en = <1>;
-		status = "okay";
+	nfc_clk {
+		nfc_clk_default: nfc_clk_default {
+			pins = "gpio2";
+			function = "normal";
+			input-enable;
+			power-source = <1>;
+		};
 	};
 };
 
 &i2c_2 {
+	status = "okay";
 	tas2555@4c {
 		compatible = "ti,tas2555";
 		reg = <0x4c>;
@@ -188,6 +180,7 @@
 };
 
 &i2c_5 { /* BLSP2 QUP1 (NFC) */
+	status = "ok";
 	/* BCM 20797 NFC Controller */
 	bcm2079x@76 {
 		status = "ok";
@@ -299,41 +292,26 @@
 
 #include "dsi-panel-mot-smd-549-1080p-cmd.dtsi"
 
-&pmx_mdss {
-	mdss_dsi_active {
-		mux {
-			pins = "gpio61";
-		};
+&mdss_mdp {
+	qcom,mdss-pref-prim-intf = "dsi";
+};
 
-		config {
-			pins = "gpio61";
-		};
-	};
-
-	mdss_dsi_suspend {
-		mux {
-			pins = "gpio61";
-		};
-
-		config {
-			pins = "gpio61";
-		};
-	};
+&mdss_dsi {
+	hw-config = "single_dsi";
 };
 
 &mdss_dsi0 {
+	qcom,dsi-pref-prim-pan = <&mot_smd_549_1080p_cmd_v0>;
 	pinctrl-names = "mdss_default", "mdss_sleep";
 	pinctrl-0 = <&mdss_dsi_active &mdss_te_active>;
 	pinctrl-1 = <&mdss_dsi_suspend &mdss_te_suspend>;
 
-	qcom,dsi-pref-prim-pan = <&mot_smd_549_1080p_cmd_v0>;
 	vci_disp-supply = <&vci_disp_vreg>;
 	vio_disp-supply = <&vio_disp_vreg>;
 	elvdd_disp-supply = <&lab_regulator>;
 	elvss_disp-supply = <&ibb_regulator>;
-	qcom,platform-reset-gpio = <&tlmm 61 0>;
 	qcom,platform-te-gpio = <&tlmm 24 0>;
-	qcom,display-id = "primary";
+	qcom,platform-reset-gpio = <&tlmm 61 0>;
 };
 
 &mdss_dsi1 {
@@ -344,9 +322,8 @@
 	gpio_keys {
 		compatible = "gpio-keys";
 		input-name = "gpio-keys";
-		pinctrl-names = "tlmm_gpio_key_active", "tlmm_gpio_key_suspend";
+		pinctrl-names = "default";
 		pinctrl-0 = <&gpio_key_active>;
-		pinctrl-1 = <&gpio_key_suspend>;
 
 		homepage {
 			label = "homepage";
@@ -354,6 +331,8 @@
 			linux,input-type = <1>;
 			linux,code = <172>;
 			debounce-interval = <15>;
+			linux,can-disable;
+			gpio-key,wakeup;
 		};
 
 		vol_up {
@@ -362,6 +341,8 @@
 			linux,input-type = <1>;
 			linux,code = <115>;
 			debounce-interval = <15>;
+			linux,can-disable;
+			gpio-key,wakeup;
 		};
 
 		one_key_low_power {
@@ -374,11 +355,14 @@
 	};
 };
 
-&pm8953_typec {
-	ss-mux-supply = <&pm8953_l13>;
-	qcom,ssmux-gpio = <&tlmm 139 GPIO_ACTIVE_HIGH>;
-	pinctrl-names = "default";
-	pinctrl-0 = <&typec_ssmux_config>;
+&thermal_zones {
+	case-therm-step {
+		status = "disabled";
+	};
+
+	quiet-therm-step {
+		status = "disabled";
+	};
 };
 
 / {
@@ -403,16 +387,16 @@
 	};
 };
 
-&pmi8950_fg {
+&qpnp_fg {
 	qcom,battery-data = <&mtp_batterydata>;
-	qcom,fg-vadc = <&pmi8950_vadc>;
-	qcom,fg-delta-soc = <1>;
+	//qcom,fg-vadc = <&pmi8950_vadc>;
+	//qcom,fg-delta-soc = <1>;
 	qcom,ext-sense-type;
-	qcom,vbat-estimate-diff-mv= <100>;
+	//qcom,vbat-estimate-diff-mv= <100>;
 	qcom,fg-iterm-ma = <600>;
 	qcom,hold-soc-while-full;
 };
 
-&pmi8950_charger {
+&qpnp_smbcharger {
 	status = "disabled";
 };
