--- a/msm8953-kuntao-p2b1.dts
+++ b/msm8953-kuntao-p2b1.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015-2016, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2015-2018, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -14,7 +14,8 @@
 /dts-v1/;
 
 #include "msm8953.dtsi"
-#include "msm-pmi8950.dtsi"
+#include "pmi8950.dtsi"
+#include "msm8953-pmi8950.dtsi"
 #include "kuntao/msm8953-mtp-kuntao.dtsi"
 
 / {
