--- a/kuntao/pmi8950-kuntao.dtsi
+++ b/kuntao/pmi8950-kuntao.dtsi
@@ -41,8 +41,8 @@
 	qcom,pmi8950@3 {
 		labibb: qpnp-labibb-regulator {
 			status = "ok";
-			qcom,qpnp-labibb-mode = "amoled";
-			qcom,swire-control;
+			qpnp,qpnp-labibb-mode = "amoled";
+			qpnp,swire-control;
 		};
 
 		wled: qcom,leds@d800 {
@@ -57,15 +57,6 @@
 			pinctrl-names = "flash_led_enable", "flash_led_disable";
 			pinctrl-0 = <&rear_flash_led_enable>;
 			pinctrl-1 = <&rear_flash_led_disable>;
-		};
-
-		pmi_haptic: qcom,haptics@c000 {
-			qcom,play-mode = "buffer";
-			qcom,wave-play-rate-us = <4263>;
-			qcom,vmax-mv = <3200>;
-			qcom,ilim-ma = <100>;
-			qcom,brake-pattern = [03 02 00 00];
-			qcom,wave-samples = [5c 5c 5c 5c 5c 5c 5c 5c];
 		};
 	};
 };
