--- a/msm8953-kuntao-p2b1.dts
+++ b/msm8953-kuntao-p2b1.dts
@@ -14,8 +14,7 @@
 /dts-v1/;
 
 #include "msm8953.dtsi"
-#include "pmi8950.dtsi"
-#include "msm8953-pmi8950.dtsi"
+#include "msm-pmi8950.dtsi"
 #include "kuntao/msm8953-mtp-kuntao.dtsi"
 
 / {
